<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BetonMenge">

    <Button
        android:id="@+id/buBack2"
        android:layout_width="415dp"
        android:layout_height="52dp"
        android:layout_marginTop="144dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buBerechnung" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="98dp"
        android:layout_height="53dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="647dp"
        android:text="@string/lenght_beton"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bulaenge"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="642dp"
        android:background="#ECECEC"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="98dp"
        android:layout_height="53dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="526dp"
        android:text="@string/breite"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/breite"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="530dp"
        android:background="#ECECEC"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/bulaenge"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="98dp"
        android:layout_height="53dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="265dp"
        android:layout_marginBottom="422dp"
        android:text="@string/height_beton"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/beton_hoehe"
        android:layout_width="208dp"
        android:layout_height="49dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="424dp"
        android:background="#ECECEC"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/breite"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="125dp"
        android:layout_height="47dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="322dp"
        android:text="@string/ergebnis"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/ergebnis_menge"
        android:layout_width="168dp"
        android:layout_height="47dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="54dp"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buberech2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/beton_hoehe" />

    <Button
        android:id="@+id/buberech2"
        android:layout_width="206dp"
        android:layout_height="92dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="130dp"
        android:text="@string/berechnung"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ergebnis_menge" />
</androidx.constraintlayout.widget.ConstraintLayout>